--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -12,7 +12,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="deconnexion"
+        android:text="@string/logout"
         android:id="@+id/btnDisconnect"
         android:layout_marginTop="171dp"
         android:layout_alignParentTop="true"
