--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -17,17 +17,20 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
             android:gravity="center"
             android:text="@string/add_list"
             android:textSize="30sp"
-            android:textColor="#333333"/>
+            android:textColor="#333333"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="36dp" />
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
+        android:layout_weight="1.81"
         android:orientation="vertical">
 
 
