--- a/app/src/main/res/layout/activity_edit_list.xml
+++ b/app/src/main/res/layout/activity_edit_list.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="@string/add_list"
+            android:text="@string/rename_list"
             android:textSize="30sp"
             android:textColor="#333333"/>
     </RelativeLayout>
@@ -46,7 +46,7 @@
 
 
         <Button
-            android:id="@+id/btn_add"
+            android:id="@+id/btn_rename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/button_validate"
