--- a/app/src/main/res/layout/activity_main_product.xml
+++ b/app/src/main/res/layout/activity_main_product.xml
@@ -1,22 +1,33 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#e3e3e3"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/activity_horizontal_margin"
+    tools:context=".ShoppingList"
+    android:orientation="vertical"
+    android:weightSum="1">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        android:orientation="vertical">
 
-
-    <ListView
+        <ListView
             android:id="@+id/list"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_height="371dp" />
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/btn_add"
+        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_weight="0.5" />
 
-
-
-</RelativeLayout>
+</LinearLayout>
