--- a/app/src/main/res/layout/activity_main_product.xml
+++ b/app/src/main/res/layout/activity_main_product.xml
@@ -27,7 +27,12 @@
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add"
-        android:layout_weight="0.5" />
+        android:text="@string/add" />
+
+    <Button
+        android:id="@+id/btn_return"
+        android:text="@string/return_lists"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
