--- a/app/src/main/res/layout/activity_edit_list.xml
+++ b/app/src/main/res/layout/activity_edit_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_horizontal_margin"
-    tools:context=".LoginActivity"
+    tools:context=".EditList"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="@string/rename_list"
+            android:text="@string/edit_list"
             android:textSize="30sp"
             android:textColor="#333333"/>
     </RelativeLayout>
@@ -49,7 +49,7 @@
             android:id="@+id/btn_rename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/button_validate"
+            android:text="@string/button_save"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="35dp"
             android:layout_alignParentBottom="true"/>
