--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_horizontal_margin"
-    tools:context=".MenuActivity"
+    tools:context=".EditProduct"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -19,12 +19,10 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="@string/menu"
+            android:text="@string/edit_product"
             android:textSize="30sp"
             android:textColor="#333333"/>
-
     </RelativeLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,27 +30,30 @@
         android:layout_weight="0.5"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btn_add_list"
-            android:layout_marginTop="4dp"
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/name_wrapper"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/add_list"/>
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="@string/hint_productname"/>
+        </android.support.design.widget.TextInputLayout>
+
 
         <Button
-            android:id="@+id/btn_lists"
-            android:layout_marginTop="4dp"
+            android:id="@+id/btn_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/watch_my_lists"/>
+            android:text="@string/button_save"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="35dp"
+            android:layout_alignParentBottom="true"/>
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/btn_logout"
-        android:layout_marginTop="4dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/logout" />
 
 </LinearLayout>
