--- a/app/src/main/res/layout/activity_edit_list.xml
+++ b/app/src/main/res/layout/activity_edit_list.xml
@@ -31,8 +31,15 @@
         android:orientation="vertical">
 
 
+        <CheckBox
+            android:text="@string/complete_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/cb_complete" />
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/name_wrapper"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
