--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -30,6 +30,11 @@
         android:layout_weight="0.5"
         android:orientation="vertical">
 
+        <CheckBox
+            android:text="@string/complete_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/cb_complete" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/name_wrapper"
