--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -44,12 +44,25 @@
                 android:hint="@string/hint_productname"/>
         </android.support.design.widget.TextInputLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/quantity_wrapper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <NumberPicker
+                android:id="@+id/quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="145dp"
+                android:layout_centerInParent="true"  />
+        </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/btn_add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/button_validate"
+            android:text="@string/button_save"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="35dp"
             android:layout_alignParentBottom="true"/>
